kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmgd-data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cmgd-data-api
  template:
    metadata:
      labels:
        app: cmgd-data-api
    spec:
      containers:
      - name: cmgd-data-api
        image: seandavi/cmgd-data-api
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
        volumeMounts:
        - name: clickhouse-secret
          mountPath: /etc/clickhouse
          readOnly: true
      volumes:
      - name: clickhouse-secret
        secret:
          secretName: clickhouse-secret
