kubernetes/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cmgd-data-api-ingressroute
  namespace: traefik # must be in the traefik namespace
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cmgd-data.cancerdatasci.org`)
      kind: Rule
      services:
        - name: cmgd-data-api-service
          port: 80
          namespace: default
  tls: 
    secretName: wildcard-cancerdatasci-org-tls
